--- a/src/app/consumptions/beer/add-beer/add-beer.component.html
+++ b/src/app/consumptions/beer/add-beer/add-beer.component.html
@@ -95,8 +95,7 @@
     mat-raised-button
     color="primary"
     type="submit"
-    [disabled]="addBeerForm.invalid"
-    [mat-dialog-close]="addBeerForm.value"
+    mat-dialog-close
   >
     CANCEL
   </button>
