--- a/src/app/consumptions/drinks/drinks.component.scss
+++ b/src/app/consumptions/drinks/drinks.component.scss
@@ -100,6 +100,7 @@
                 .chevrons {
                   fa-icon {
                     color: white;
+                    cursor: pointer;
                   }
                   .invalid-chevron {
                     color: transparent;
