--- a/src/app/consumptions/food/add-food/add-food.component.scss
+++ b/src/app/consumptions/food/add-food/add-food.component.scss
@@ -1,13 +1,16 @@
-form {
-  .dutch-section, .english-section {
-    border: 2px solid black;
-    border-radius: .5rem;
-    padding: .5rem;
-    margin: 0.5rem 0;
-  }
-  .amount-vegetarian-price-list {
-    mat-form-field {
-      width: 80px;
+.container {
+  padding: 1.5rem;
+  form {
+    .dutch-section, .english-section {
+      border: 2px solid black;
+      border-radius: .5rem;
+      padding: .5rem;
+      margin: 0.5rem 0;
+    }
+    .amount-vegetarian-price-list {
+      mat-form-field {
+        width: 80px;
+      }
     }
   }
 }
