--- a/src/app/exhibitions/show-case/show-case.component.scss
+++ b/src/app/exhibitions/show-case/show-case.component.scss
@@ -36,13 +36,20 @@ main {
         background-color: var(--header-blue);
         color: var(--text-color-bright-orange);
         // background-color: var(--exhibition-background);
-        
+
         margin: 7px 0px;
         border-radius: 3px;
         padding: 0.5rem 1rem;
         font-size: 0.9rem;
         .date {
-          
+          // border: 3px solid pink;
+          hr {
+            background-color: var(--text-color-orange);
+            height: 1px;
+            border: 0;
+            opacity: 0.5;
+            width: 80%;
+          }
         }
         .artist-name {
           margin: 10px 0px 15px 0px;
@@ -67,25 +74,25 @@ main {
   padding: 2px 0px 2px 5px;
   background-color: lightgray;
   opacity: 0.7;
-  .caption, .copyright, .price {
+  .caption,
+  .copyright,
+  .price {
     color: black;
     padding-right: 7px;
-    font-size: .6rem;;
+    font-size: 0.6rem;
   }
 }
 
-
-
-
 .hr-visit-contact {
-  background-color: var(--text-color-orange); height: 1px; border: 0;
+  background-color: var(--text-color-orange);
+  height: 1px;
+  border: 0;
   opacity: 0.5;
-  width: 80%
+  width: 80%;
 }
 
-
-
-ul, li {
+ul,
+li {
   padding: 0px;
   margin: 0px;
 }
@@ -93,13 +100,8 @@ a {
   color: var(--text-color-bright-orange);
 }
 a:hover {
-  color: var(--text-color-orange)
+  color: var(--text-color-orange);
 }
-
-
-
-
-
 
 /* ********************* */
 @media (min-width: 320px) and (max-width: 480px) {
@@ -147,7 +149,6 @@ a:hover {
     grid-column-start: 1;
     grid-column-end: 13;
   } */
-
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
@@ -205,8 +206,8 @@ a:hover {
     grid-column-end: -1;
   } */
 }
-@media (min-width: 768px)  {
-/* @media (min-width: 768px) and (max-width: 1024px) { */
+@media (min-width: 768px) {
+  /* @media (min-width: 768px) and (max-width: 1024px) { */
   /* .main {
     border: 5px solid red;
   }
@@ -267,7 +268,8 @@ a:hover {
   } */
 }
 
+@media (min-width: 1025px) and (max-width: 1280px) {
+}
 
-@media (min-width: 1025px) and (max-width: 1280px) { }
-
-@media (min-width: 1281px) { }
+@media (min-width: 1281px) {
+}
