Jazzengel corona-dialog

--- a/src/app/navigation/footer/footer.component.html
+++ b/src/app/navigation/footer/footer.component.html
@@ -73,12 +73,15 @@
           Jazz op zondag
         </p>
         <p class="footer-section-content">
-          Jazz engel jamt normaliter elke zondag tussen 
+          I.V.M Corona voorlopig geen jazzsession
+        </p>
+        <!-- <p class="footer-section-content">
+          Jazz engel jamt normaliter elke zondag tussen
           <span style="white-space:nowrap">16:30 – 19:00</span>.<br>
           Ga naar de website van
           <a href="http://www.jazzengel.nl" rel="noreferrer" class="jazz-engel-link" target="_blank">JAZZENGEL</a>
           voor meer informatie en het programma.
-        </p>
+        </p> -->
       </div>
     </span>
 
@@ -87,10 +90,11 @@
         <p class="footer-section-title">
           Jazz on Sundays
         </p>
-        <p class="footer-section-content">
+        <p class="footer-section-content">Sessions cancelled due to corona</p>
+        <!-- <p class="footer-section-content">
           Every sunday there's is a jazz-jamm session between <span style="white-space:nowrap">16:30 – 19:00</span>.<br>
           For the latest information about the progam, visit <a rel="noreferrer" class="jazz-engel-link" href="www.jazzengel.nl">JAZZENGEL</a>
-        </p>
+        </p> -->
       </div>
     </span>
 
