--- a/src/app/corona-dialog/corona-dialog.component.html
+++ b/src/app/corona-dialog/corona-dialog.component.html
@@ -12,6 +12,9 @@
   <div class="keuken">
     Onze keuken sluit om 19:00
   </div>
+  <div class="snacks">
+    Snacks tot 19:30
+  </div>
   <div class="jazzengel">
     Voorlopig geen jazz op zondagmiddag.
   </div>
@@ -29,6 +32,9 @@
   </div>
   <div class="keuken">
     Our kitchen closes at 19:00
+  </div>
+  <div class="snacks">
+    Snacks untill 19:30
   </div>
   <div class="jazzengel">
     No jazz on sunday afternoons.
