--- a/src/app/corona-dialog/corona-dialog.component.html
+++ b/src/app/corona-dialog/corona-dialog.component.html
@@ -7,13 +7,13 @@
   
   fxLayout="column" fxLayoutGap="1rem">
   <div class="openingstijden">
-    Wegens corona is het café dagelijks open van 12:00&nbsp;tot&nbsp;20:00.
+    Wegens corona is het café dagelijks open van 12:00&nbsp;tot&nbsp;17:00.
   </div>
-  <div class="keuken">
+  <!-- <div class="keuken">
     Onze keuken sluit om 19:00
-  </div>
+  </div> -->
   <div class="snacks">
-    Snacks tot 19:30
+    Snacks & Lunch tot 17:00
   </div>
   <div class="jazzengel">
     Voorlopig geen jazz op zondagmiddag.
@@ -28,13 +28,13 @@
 <div *ngIf="language === 'english'" class="container-english"
   fxLayout="column" fxLayoutGap="1rem">
   <div class="openingstijden">
-    Due to corona, our café is opened from 12:00&nbsp;until&nbsp;20:00.
+    Due to corona, our café is opened from 12:00&nbsp;until&nbsp;17:00.
   </div>
-  <div class="keuken">
+  <!-- <div class="keuken">
     Our kitchen closes at 19:00
-  </div>
+  </div> -->
   <div class="snacks">
-    Snacks untill 19:30
+    Snacks & Lunch untill 17:00
   </div>
   <div class="jazzengel">
     No jazz on sunday afternoons.
