gesloten wegens corona

--- a/src/app/corona-dialog/corona-dialog.component.html
+++ b/src/app/corona-dialog/corona-dialog.component.html
@@ -7,16 +7,16 @@
   
   fxLayout="column" fxLayoutGap="1rem">
   <div class="openingstijden">
-    Wegens corona is het café dagelijks open van 12:00&nbsp;tot&nbsp;17:00.
+    Wegens corona is het café tot 14 januari gesloten.
   </div>
   <!-- <div class="keuken">
     Onze keuken sluit om 19:00
   </div> -->
   <div class="snacks">
-    Snacks & Lunch tot 17:00
+    <!-- Snacks & Lunch tot 17:00 -->
   </div>
   <div class="jazzengel">
-    Voorlopig geen jazz op zondagmiddag.
+    <!-- Voorlopig geen jazz op zondagmiddag. -->
   </div>
   <button 
     mat-raised-button
@@ -28,16 +28,16 @@
 <div *ngIf="language === 'english'" class="container-english"
   fxLayout="column" fxLayoutGap="1rem">
   <div class="openingstijden">
-    Due to corona, our café is opened from 12:00&nbsp;until&nbsp;17:00.
+    Due to corona, our café is closed until Januari 14th.
   </div>
   <!-- <div class="keuken">
     Our kitchen closes at 19:00
   </div> -->
   <div class="snacks">
-    Snacks & Lunch untill 17:00
+    <!-- Snacks & Lunch untill 17:00 -->
   </div>
   <div class="jazzengel">
-    No jazz on sunday afternoons.
+    <!-- No jazz on sunday afternoons. -->
   </div>
   <button 
     mat-raised-button
