--- a/src/app/navigation/footer/footer.component.html
+++ b/src/app/navigation/footer/footer.component.html
@@ -72,17 +72,17 @@
           <span *ngIf="language === 'dutch'">Jazz op zondag</span>
           <span *ngIf="language === 'english'">Jazz on Sundays</span>
         </div>
-        <div class="jazzengel-content">
+        <!-- <div class="jazzengel-content">
           <span *ngIf="language === 'dutch'">I.V.M Corona voorlopig geen jazzsession</span>
           <span *ngIf="language === 'english'">Sessions cancelled due to corona</span>
-        </div>
-        <!-- <p class="footer-section-content">
-          Jazz engel jamt normaliter elke zondag tussen
-          <span style="white-space:nowrap">16:30 – 19:00</span>.<br>
+        </div> -->
+        <p class="footer-section-content">
+          Jazzengel jamt elke zondag van
+          <span style="white-space:nowrap">16:30&nbsp;tot&nbsp;19:00</span>.<br>
           Ga naar de website van
           <a href="http://www.jazzengel.nl" rel="noreferrer" class="jazz-engel-link" target="_blank">JAZZENGEL</a>
           voor meer informatie en het programma.
-        </p> -->
+        </p>
     </div>
   </div>
 
