--- a/src/app/exhibitions/exhibitions.component.html
+++ b/src/app/exhibitions/exhibitions.component.html
@@ -15,7 +15,7 @@
       </p>
 
       <p *ngIf="language === 'english'" class="banner-text-content">
-        Op deze pagina vind je de alles over de seizoensexpo bij de Café de Engelbewaarder.
+        Op deze pagina vind je alles over de seizoensexpo bij Café de Engelbewaarder.
       </p>
     </div>
   </div>
