--- a/src/app/navigation/sidenav/sidenav.component.html
+++ b/src/app/navigation/sidenav/sidenav.component.html
@@ -35,7 +35,7 @@
   <div class="hr-container">
     <hr class="hr" />
   </div>
-  <a (click)="onCloseSidenav()"  class="nav-list-item" routerLink="exhibitions">
+  <a (click)="onCloseSidenav()"  class="nav-list-item" routerLink="new-exhibitions">
     <span *ngIf="language === 'dutch'">EXPOSITIES</span>
     <span *ngIf="language === 'english'">EXHIBITIONS</span>
   </a>
