--- a/src/styles.scss
+++ b/src/styles.scss
@@ -32,6 +32,9 @@ ul {
   height: 100vh;
   
 }
+.full-size-image .mat-dialog-container{
+  padding: 0;
+}
 
 .panelClassFailure {
   border: 10px solid red
