--- a/src/app/exhibitions/add-exhibition/add-exhibition.component.html
+++ b/src/app/exhibitions/add-exhibition/add-exhibition.component.html
@@ -1,53 +1,119 @@
-<section fxLayout="column" fxLayoutAlign="center center">
-  <h4>ADD EXHIBITION</h4>
-  <div class="exhibition-form-container">
-    <form [formGroup]="exhibitionForm" fxLayout="column">
-      <mat-label>NAME</mat-label>
-      <mat-form-field>
-        <input
-          matInput
-          type="text"
-          formControlName="title">
-      </mat-form-field>
-      <mat-form-field appearance="fill">
-        <mat-label>Enter a date range</mat-label>
-        <mat-date-range-input [rangePicker]="picker">
-          <input matStartDate formControlName="start-exhibition" placeholder="Start date">
-          <input matEndDate formControlName="end-exhibition" placeholder="End date">
-        </mat-date-range-input>
-        <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-        <mat-date-range-picker #picker></mat-date-range-picker>
+<div class="page-container">
+    <div class="form-containers" fxLayout="row" fxLayoutGap="1rem">
 
-        <!-- <mat-error *ngIf="range.controls.start.hasError('matStartDateInvalid')">Invalid start date</mat-error>
-        <mat-error *ngIf="range.controls.end.hasError('matEndDateInvalid')">Invalid end date</mat-error> -->
-      </mat-form-field>
-      <div class="" formArrayName="artist-names">
-        <h4>add artist names</h4>
-        <button mat-raised-button color="primary" type="button" (click)="onAddArtistName()">ADD ARTIST NAME</button>
-        <div *ngFor="let artistNamesControl of exhibitionForm.get('artist-names')?.controls; let i = index">
-          <mat-form-field>
-            <mat-label>ARTIST NAME</mat-label>
-            <input type="text" matInput [formControlName]="i">
-          </mat-form-field>
-          <!-- <button mat-raised-button (click)="onCancel(i)">Cancel</button> -->
+        <div class="exhibition-form-container">
+            <form class="exhibition-form" [formGroup]="exhibitionForm" fxLayout="column">
+                <mat-form-field>
+                    <mat-label>title</mat-label>
+                    <input
+                        matInput
+                        type="text"
+                        formControlName="title">
+                </mat-form-field>
+
+                <mat-form-field appearance="fill">
+                    <mat-label>Enter a date range</mat-label>
+                    <mat-date-range-input [rangePicker]="picker">
+                        <input matStartDate formControlName="startExhibition" placeholder="Start date">
+                        <input matEndDate formControlName="endExhibition" placeholder="End date">
+                    </mat-date-range-input>
+                    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                    <mat-date-range-picker #picker></mat-date-range-picker>
+                </mat-form-field>
+
+                <div class="artist-names" formArrayName="artistNames">
+                    <!-- <h4>add artist names</h4> -->
+                    <button [disabled]="imageComponentOpen" mat-raised-button color="primary" type="button" (click)="onAddArtistName()">ADD ARTIST
+                        NAME</button>
+                    <div *ngFor="let artistNamesControl of exhibitionForm.get('artistNames')?.controls; let i = index">
+                        <mat-form-field>
+                            <mat-label>ARTIST NAME</mat-label>
+                            <input type="text" matInput [formControlName]="i">
+                        </mat-form-field>
+                        <!-- <button mat-raised-button (click)="onCancel(i)">Cancel</button> -->
+                    </div>
+                </div>
+                <mat-form-field>
+                    <label for="description">description</label>
+                    <textarea
+                        matInput
+                        cols="30" 
+                        rows="10"
+                        formControlName="description">
+                    </textarea>
+                </mat-form-field>
+                <button [disabled]="imageComponentOpen" class="add-exibition" mat-raised-button color="primary" (click)="onAddExhibition()">ADD EXHIBITION</button>
+            </form>
+            <div class="exhibition">
+                <div class="exhibition-title">
+                    {{exhibition.title}}
+                </div>
+                <div class="exhibition-images-container">
+                    <ul fxLayout fxLayoutGap=".5rem">
+                        <li
+                            *ngFor="let image of exhibition.images; 
+                            let i = index"
+                            (click)="onEditImage(i)">
+                            <div
+                                class="image-orderNumber">
+                                <span>order: </span>{{image.orderNumber}}
+                            </div>
+                            <div 
+                                class="image-title">
+                                <span>title: </span>{{image.title}}
+                            </div>
+                            <div
+                                *ngIf="image.artistName" 
+                                class="image-artistName">
+                                <span>artist name: </span>
+                                {{image.artistName}}
+                            </div>
+                            <div
+                                *ngIf="image.copyrightOwner" 
+                                class="image-copyrightOwner">
+                                <span>copyright owner: </span>
+                                {{image.copyrightOwner}}
+                            </div>
+                            <div
+                                *ngIf="image.price"
+                                class="image-price">
+                                <span>price: </span>
+                                {{image.price|currency:"EUR"}}
+                            </div>
+                            <div class="exhibition-image-container">
+                                <div class="exhibition-image">
+                                    <img [src]="image.filePath" alt="">
+                                </div>
+                            </div>
+                            <div class="buttons">
+                                <button
+                                    [disabled]="imageComponentOpen"
+                                    (click)="onDeleteImage(i)">
+                                    <mat-icon>delete</mat-icon></button>
+                                <button
+                                    [disabled]="imageComponentOpen"
+                                    (click)="onEditImage(i)">
+                                    <mat-icon>edit</mat-icon>
+                                </button>
+                            </div>
+                        </li>
+                    </ul>
+                    <button 
+                        [disabled]="imageComponentOpen" 
+                        (click)="openAddImageComponent()">
+                        <mat-icon>add</mat-icon>
+                    </button>
+                </div>
+            </div>
         </div>
-      </div>
-      <div class="slide-form-container">
-        <form [formGroup]="slideForm">
-          <div class="" *ngFor="let slideNamesControl of slideForm.get('slideName')?.controls; let i = index">
-            <mat-form-field>
-              <mat-label>SLIDE NAME</mat-label>
-              <input
-                type="text"
-                matInput
-                fromControlName="slideName">
-            </mat-form-field>
-          </div>
-          <button type="button" (click)="onAddSlide()">ADD SLIDE</button>
-        </form>
-      </div>
-      <button mat-raised-button color="primary" (click)="onAddExhibition()">ADD EXHIBITION</button>
-    </form>
 
-  </div>
-</section>
+        
+        <app-add-image
+            *ngIf="imageComponentOpen" 
+            (exportImageToParent)="importImageFromChild($event)"
+            (closeAddImageComponent)="closeAddImageComponent()"
+            [importImageFromParent]="exportImageToChild">
+        </app-add-image>
+    </div>
+</div>
+
