--- a/src/app/navigation/header/header.component.html
+++ b/src/app/navigation/header/header.component.html
@@ -48,13 +48,24 @@
           </li>
           <li>
             <a
-              routerLink="exhibitions"
+              routerLink="new-exhibitions"
               (click)="mealTypeSelected('exhibitions')"
               routerLinkActive="routerlink-active">
               <span *ngIf="language === 'dutch'">EXPOSITIES</span>
               <span *ngIf="language === 'english'">EXHIBITIONS</span>
             </a>
           </li>
+          <!-- <li *ngIf="isAuth$|async">
+            <a
+              routerLink="exhibitions/add-exhibition"
+              (click)="mealTypeSelected('exhibitions')"
+              routerLinkActive="routerlink-active">
+              <span *ngIf="language === 'dutch'">add-exhibition</span>
+              <span *ngIf="language === 'english'">add-exhibition</span>
+            </a>
+          </li> -->
+          <!-- <li *ngIf="userEmail$|async"><a routerLink="/new-exhibitions">NEW EXHIBITIONS</a></li> -->
+          <!-- <li><a routerLink="/new-exhibitions">NEW EXHIBITIONS</a></li> -->
           <li *ngIf="!(userEmail$ | async)"
             (click)="onLogIn()">
             <a routerLinkActive="routerlink-active"><span>LOG IN</span></a>
@@ -82,6 +93,7 @@
               routerLink="/exhibitions">EXPOSITIES</a></li>
           <li class="expositions-link" *ngIf="isShowcaseActive && language === 'english'"><a
               routerLink="/exhibitions">EXHIBITIONS</a></li>
+          
         </ul>
       </div>
 
